@@ -103,6 +103,11 @@ Changes on 1.2.0 since 1.1.0:
     available also for side pane items' context menu if used with LibFM
     1.2.0 or newer.
 
+* If used with libfm 1.2.0 or newer then option 'mingle' will be included
+    into default sort modes for the Desktop. This is expected by most of
+    users - we add something to Desktop, then we see it after all already
+    added items, not after other folders.
+
 
 Changes on 1.1.0 since 1.0.1:
 
